revise prompts, rubrics for discussion forums

--- a/BF/BF 1001 prompts.tex
+++ b/BF/BF 1001 prompts.tex
@@ -31,22 +31,22 @@
 
 \title{Writing Prompts in \textsc{bf} 1001 – For Revision}
 \author{Daniel R. Driver, PhD}
-\date{Revised for Fall 2018, on ground at AST\thanks{Drawn up for a Fall 2017 version of the course, offered online. Reviewed with Adriel, who was TA that semester, on 22 June 2018.}}
+\date{Revised for Winter 2020, online at AST\thanks{Drawn up for a Fall 2017 version of the course, offered online. Reviewed with Adriel, who was TA that semester, on 22 June 2018, before on ground course that fall.}}
 
 \begin{document}
 \maketitle
 
 \section{Hebrew Bible/Tanakh/Old Testament}
 
-Review HBFB 1–26 and Seitz. Then, write three standalone sentences and one short paragraph related to the most basic terminology for the subject matter of this course.
+Read HBFB 1–26 and one of the first week’s supplementary articles (by Davis or Seitz, or look at both if you wish). Then, write a few sentences related to the most basic terminology for the subject matter of this course.
 
-First, make appropriate use of each of the three phrases “Hebrew Bible,” “Tanakh,” and “Old Testament” in three simple sentence. As you write each one, work to create a context and meaning that is appropriate to each term. For example, it would not be appropriate to write: “Rabbinic Judaism traditionally counts 613 laws in the Old Testament.”
+First, practice making appropriate use of each of the three phrases “Hebrew Bible,” “Tanakh,” and “Old Testament.” If desired, you could write three simple sentences, one for each term. Alternatively, you could use each term in your paragraph for reflection (see below). As you write, work to create a context and meaning that is appropriate to each term. For example, it would not really be appropriate to write: “Rabbinic Judaism traditionally counts 613 laws in the Old Testament.”
 
 Second, in a short paragraph, reflect on your own relationship to the Hebrew Bible/Tanakh/Old Testament. If you like, you may outline your personal policy for how best to refer to the material we will be considering this semester.
 
-\section{The Aqedah (“Binding” of Isaac)}
+\section{Genesis and the Aqedah}
 
-Once you have read the entire book of Genesis and the assigned secondary reading, carefully re-read Genesis 22:1–19. Then answer the following question: In what way is the story of the Aqedah (“Binding” of Isaac) the culmination and climax of God’s call to Abraham? It may help to refer back to the original call in Genesis 12:1–3, and to the Abraham cycle between Genesis 12 and 22, but your answer should reflect a careful reading of Genesis 22 above all.
+Once you have read the entire book of Genesis and the assigned secondary reading, carefully re-read Genesis 22:1–19. Then answer the following question: In what way is the story of the Aqedah (the “Binding” of Isaac) the culmination and climax of God’s call to Abraham? It may help to refer back to the original call in Genesis 12:1–3, and to the Abraham cycle between Genesis 12 and 22, but your answer should reflect a careful reading of Genesis 22 above all.
 
 
 \section{The Hardening of Pharaoh's Heart}
@@ -65,34 +65,53 @@ Once you have completed all the assigned reading, take another look at the Shema
 
 If this question seems to difficult, here's a simpler alternative: What are the four main ways that the Shema can be translated in English? What sets each possible understanding apart from the others?
 
-\section{Pass (not set)}
+\section{Texts of Terror}
 
-Conquest question? Reflect on the problem of genocide in connection with the ban?
+Phyllis Trible’s \emph{Texts of Terror: Literary-Feminist Readings of Biblical Narratives} is a modern classic, and Atlantic School of Theology played a small role in its development. The book started as a series of lectures at Yale Divinity School in 1982, selections of which were then given at AST the same year, followed by two other schools in 1983 (Preface, xiii). I imagine that the public performance of these essays helped sharpen them before they were published in 1984.
+
+More importantly, the fact that the book’s first audiences were people in seminaries and theological schools underscores a remarkable feature of the study: it not a work of academic feminism as much as it is a work of *Christian* feminism. Each of the four chapters start with an epigraph (a quote above a chapter) presented as an epitaph (an inscription on a tombstone) for a woman from the Bible. She associates these women with words bound to the life of Christ as it is presented in Christian scripture, often using words derived from the Old Testament. The chapter titles and their epigraphs are:
+
+Chapter 1. Hagar: The Desolation of Rejection – “Hagar, Egyptian Slave Woman. She was wounded for our transgressions; she was bruised for our iniquities.”
+
+Chapter 2. Tamar: The Royal Rape of Wisdom – “Tamar, Princess of Judah. A woman of sorrows and acquainted with grief.”
+
+Chapter 3. An Unnamed Woman: The Extravagance of Violence – “An Unnamed Woman, Concubine from Bethlehem. Her body was broken and given to many.”
+
+Chapter 4. The Daughter of Jephthah: An Inhuman Sacrifice – “The Daughter of Jephthah, Virgin in Gilead. My God, my God, why hast thou forsaken her?”
+
+You were asked to read Chapter 3. In what way does that chapter function as a work of Christian theology? How successful is it as a Christian response to Judges 19, in your judgment?
 
 \section{Establishing a Monarchy}
 
-Recall how the problem of succession develops across the first several chapters of 1 Samuel. Eli’s sons are so bad that Samuel is raised up to succeed him instead, but then Samuel’s sons turn out to be wicked as well (1 Samuel 8:1–3), creating a new crisis of leadership. Against this background, the people ask for a king in 1 Samuel 8. Re-read that chapter carefully, and then answer the following question. Why is God prepared to give the people what they want (a king) even though God and Samuel are both opposed to the request? It may help to connect your answer to the secondary reading.
+Recall how the problem of succession develops across the first several chapters of 1 Samuel. Eli’s sons are so bad that Samuel is raised up to succeed him instead, but then Samuel’s sons turn out to be wicked as well (1 Samuel 8:1–3), creating a new crisis of leadership. Against this background, the people ask for a king in 1 Samuel 8. Re-read that chapter carefully, and then answer the following question.
 
+Why is God prepared to give the people the king they seek even though God and Samuel are both opposed to the request? It may help to connect your answer to the secondary reading.
 
 \section{Artful Repetition}
 
-Read “The Techniques of Repetition,” from Chapter 5 of Robert Alter’s classic study The Art of Biblical Narrative (1981). Then, identify and describe an example of artful repetition from your reading of 1 \& 2 Kings. For maximum points, try to build on Alter’s work by identifying a further example of repetition in the Hebrew Bible that is not named in the supplementary reading.
+Read “The Techniques of Repetition,” from Chapter 5 of Robert Alter’s classic study \emph{The Art of Biblical Narrative} (1981). Then, identify and describe an example of artful repetition from your reading of 1 \& 2 Kings. For maximum points, try to build on Alter’s work by identifying a further example of repetition in the Hebrew Bible that is not named in the supplementary reading.
 
 
-\section{Isaiah in Irenaeus}
+\section{Isaiah in Christian Interpretation}
 
-NB - Rewrite: Ellen Davis has been substituted for Childs, and Irenaeus has been retired.
+Once you have read the assigned selections from Isaiah, and Irenaeus, and ideally also Childs on Irenaeus and Davis on biblical prophecy, look back at Irenaeus’ On the Apostolic Preaching. Then answer the following question in 250–300 words: What is one specific contribution Irenaeus makes, or else what is one problem Irenaeus creates, in early Christian interpretation of Isaiah?
 
-%Once you have read the biblical book of Isaiah, and ideally also Childs on Irenaeus as an interpreter of Isaiah, look back at On the Apostolic Preaching (assigned for last week). Then, in anticipation of your final paper, answer the following in 250 words: What is one specific contribution Irenaeus makes, or else what is one problem Irenaeus creates, in early Christian interpretation of Isaiah? Be focussed and specific. Try to cite both Irenaeus and the Book of Isaiah at the point where you identify either a problem or a contribution.
+Be focussed and specific. Try to cite both Irenaeus and the Book of Isaiah at the point where you identify either a problem or a contribution. If you have not yet written your review essay, it is completely acceptable to let this exercise serve as a warm-up for that assignment.
 
-
-\section{The End of Jonah}
-
-NB - Write: Alan Cooper - In Praise of Divine Caprice. Where does the book of Jonah end? Or something along those lines.
-
-%This is the second-to-last writing prompt. It gives you an opportunity to refine your thesis for your second paper (the paper is due in Week 11, so there will be no writing prompt then). Think of your post this week as an abstract, or as a draft of part of your introductory paragraph. Use your 250 words to give some context for your proposal, but know that a thesis for a paper of this length ought to be just a single sentence.
+% Alt idea for week 10, based on the actual content
+%\section{The End of Jonah}
 %
-%Your task is this: Craft and propose a thesis that can be supported with a 3000 word argument. Realize that a good thesis is unified, restricted, and precise. Make sure that your thesis touches both on an Old Testament text of your choice, and the interpretation of that text in Irenaeus, On the Apostolic Preaching. (For help on what makes a good thesis, I have attached a handout/worksheet that I used when I was working with college students in Chicago. It shows exactly how the TA and I will evaluate your thesis statements for this exercise.)
+% NB Write something, maybe re: Alan Cooper - In Praise of Divine Caprice. Where does the book of Jonah end? Or something along those lines.
+
+\section{What is Your Second Paper’s Thesis?}
+
+Use the writing prompt this week to improve your second paper, which is due at the end of Week 11. First, tell us whether you are writing a review essay or an exegetical essay. Then, take some time to consider what you will argue. What is your proposed thesis? Write it down here. Put it in bold type. Remember that a thesis encapsulates your argument in just a single sentence. Remember, too, that a good thesis is unified, restricted, and precise.
+
+Fill out your draft thesis statement in the rest of your post this week. Think of it as an abstract for your paper, or perhaps as a first version of your introductory paragraph. In about 250 words, which is 10\% of the target length for a short paper in this class, tell us what you intend to say in the finished essay. Be as specific as you can be at this stage of the writing process.
+
+The TA and I will try to give a little feedback before the final paper is due. Look around at the posts of your classmates, too, and try to give some constructive feedback of your own. Do you see any ways that your peers can make their theses more unified, restricted, or precise? Are there any texts or issues that you think they ought to cover? If so, tell them in a short, courteous response to their posts. Let the forum this week be a writing workshop and a centre for peer review.
+
+If you need help knowing how to draft or evaluate a thesis, see my handout on crafting a strong thesis, and review the relevant chapters in Making Sense in Religious Studies.
 
 
 \section{Praying the Psalms}
@@ -112,7 +131,7 @@ NB - Re-write. What follows is too diffuse. Maybe focus on the simple translatio
 %\item \emph{Vanity}, which emphasizes the pursuit of “wordy frivolities rather than scriptural values.”
 %\item \emph{Futile}, which emphasizes frustrated action and the imbalance between “the productivity of human work and the value of its products.”
 %\item \emph{Ephemeral}, which emphasizes the problem of “life’s brevity.”
-%\item \emph{Incomprehensible}, which emphasizes the “limitations of human reason,” since the meaning of live is so elusive.
+%\item \emph{Incomprehensible}, which emphasizes the “limitations of human reason,” since the meaning of live is so elusiv
 %\item \emph{Absurd} or \emph{senseless}, which emphasizes the  way life is contradictory, “counter-rational,” and “a violation of reason.”
 %\end{enumerate}
 %
