I forgot what these were about

--- a/BF/BF 1001 prompts.tex
+++ b/BF/BF 1001 prompts.tex
@@ -38,9 +38,9 @@
 
 \section{Hebrew Bible/Tanakh/Old Testament}
 
-Read HBFB 1–26 and one of the first week’s supplementary articles (by Davis or Seitz, or look at both if you wish). Then, write a few sentences related to the most basic terminology for the subject matter of this course.
+Read HBFB 1–26 and one of the first week’s supplementary articles (I suggest you start with Davis, and move on to Seitz if you want more on the topic). Then, write a few sentences related to the most basic terminology for the subject matter of this course.
 
-First, practice making appropriate use of each of the three phrases “Hebrew Bible,” “Tanakh,” and “Old Testament.” If desired, you could write three simple sentences, one for each term. Alternatively, you could use each term in your paragraph for reflection (see below). As you write, work to create a context and meaning that is appropriate to each term. For example, it would not really be appropriate to write: “Rabbinic Judaism traditionally counts 613 laws in the Old Testament.”
+Your first goal is to practice making appropriate use of each of the three phrases “Hebrew Bible,” “Tanakh,” and “Old Testament.” If desired, you could write three simple sentences, one for each term. Alternatively, you could use each term in a paragraph of personal reflection (see below). As you write, work to create a context and meaning that is appropriate to each term. For example, it would not really be appropriate to write: “Rabbinic Judaism traditionally counts 613 laws in the Old Testament.”
 
 Second, in a short paragraph, reflect on your own relationship to the Hebrew Bible/Tanakh/Old Testament. If you like, you may outline your personal policy for how best to refer to the material we will be considering this semester.
 
