HB 2201 version 3.5.0 for Summer 2020

--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -36,7 +36,7 @@
   \renewcommand\pphone{\addfontfeatures{Numbers=Monospaced}#1\xspace}}
 \newcommand\email[1]{
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
-\newcommand\officehours[2][Main Building, Room 106]{
+\newcommand\officehours[2][Library, Room 5-North]{
   \renewcommand\poffice{#1\xspace}
   \renewcommand\phours{#2\xspace}}
 %
