--- a/BF/BF 1001-Driver 2020.tex
+++ b/BF/BF 1001-Driver 2020.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 \onlinetrue % \Int{true}{false}
-\coursecode[3.5]{BF 1001}
+\coursecode[3.6]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -38,14 +38,15 @@
 %   - Fall 2017(Int - online section run parallel to campus course)
 %   - Fall 2018
 %   - Winter 2020(Int)
+%   - Fall 2020 (not scheduled Int, but driven online by Covid-19)
 
 \professor{Daniel R. Driver}
 \phone{902-222-0930}
 \email{ddriver@astheology.ns.ca}
-\officehours{Thursdays, 12:30--2:00 \PM}
+\officehours[Microsoft Teams]{Thursdays, 1:00--3:00 \PM}
 
-\semester{Winter Term 2020}
-\meets{\Int{Fridays}{Mondays}}% \meets{on}{at}{in}
+\semester{Fall Term 2020}
+\meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
       {Classroom 3}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
@@ -203,28 +204,28 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{10}{} Jan. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{17}{} Jan. \\
-		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{24}{} Jan. \\
-		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{31}{} Jan. \\
-		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{ 7}{} Feb. \\
-	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{14 Feb.}    \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{10}{} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{17}{} Sep. \\
+		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{24}{} Sep. \\
+		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{ 1}{} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{ 8}{} Oct. \\
+	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{15 Oct.}    \\ [1ex]
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{14}{} Feb. \\
-	\noclass{AST Reading Week}                                                           & \Int{21}{} Feb. \\
-		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{28}{} Feb. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{ 6}{} Mar. \\
-%	\noclass{AST Closed on Monday}                                                       & \Int{2 }{} Mar. \\
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{13}{} Mar. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{20}{} Mar. \\
-	\reminder{A second short paper is \textbf{due} by the end of the eleventh week of class}{27 Mar.}    \\ [1ex]
+		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{15}{} Oct. \\
+	\noclass{AST Reading Week}                                                           & \Int{22}{} Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{29}{} Oct. \\
+		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{ 5}{} Nov. \\
+%	\noclass{AST Closed on Monday}                                                       & \Int{2 }{} Nov. \\
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{12}{} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{19}{} Nov. \\
+	\reminder{A second short paper is \textbf{due} by the end of the eleventh week of class}{26 Nov.}    \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{27}{} Mar. \\
-		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{ 3}{} Apr. \\ [1ex]
+		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{26}{} Nov. \\
+		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{ 3}{} Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{14 Apr.} \\
 
