update defaul prereqs, make http > https

--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{variables.tex}[2018/05/24 v2.1 -- Syllabus variables]
+\ProvidesFile{variables.tex}[2020/12/17 v2.2 -- Syllabus variables]
 
 \usepackage{xspace} % make manual spaces (like \mycmd\ ) unnecessary
 \usepackage{xifthen} % provides \isempty test
@@ -57,8 +57,8 @@
   \renewcommand\cmeetsat{\Int{From 9:00 \AM}{#2}\xspace}
   \renewcommand\cmeetsin{\Int{\href{https://smu.brightspace.com/d2l/login}{Brightspace}}{#3}\xspace}}
 \newcommand\website[1]{
-  \renewcommand\cwebsite{\href{http://#1}{#1}\xspace}}
-\newcommand\cdescription[2][RM 1000 or GTRS 6000; and BF 1001]{
+  \renewcommand\cwebsite{\href{https://#1}{#1}\xspace}}
+\newcommand\cdescription[2][BF 1001 and RM 1000 or GTRS 6000]{
   \renewcommand\cprereqs{#1}
   \renewcommand\cdescrip{#2\par}}
 \newcommand\objectives[1]{
